More cacheing & a super small updates label spacing fix

--- a/app/assets/stylesheets/application/grants/grants.scss
+++ b/app/assets/stylesheets/application/grants/grants.scss
@@ -35,6 +35,9 @@ ul.grant-list {
 
     .body {
       // margin-bottom: 15px;
+      &.show-class {
+        margin-bottom: 6px;
+      }
     }
 
     .label {
